<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4ac"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tim.plainsailing.SettingsActivity" >

    <CheckBox
        android:id="@+id/volumeToggle"
                android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_volume"  />
    
        <CheckBox
        android:id="@+id/fuelToggle"
                android:layout_marginTop="5dp"
                android:layout_below="@id/volumeToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_fuel" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:onClick="apply"
        android:text="@string/but_apply" />

</RelativeLayout>